fixed the leftbar layout issue

--- a/homepage/style/homepagestyle.css
+++ b/homepage/style/homepagestyle.css
@@ -49,7 +49,7 @@ header div:nth-child(3) {
 	display: flex;
 	justify-content: center;
 	margin-top: 90px;
-  	flex-wrap: wrap;
+  	
   	align-items: flex-start;
 }
 
